# common-api-dbus-tools

./: CMakeLists.txt  README.md
org.genivi.commonapi.dbus/: build.properties  pom.xml
org.genivi.commonapi.dbus/deployment/: CommonAPI-DBus_deployment_spec.fdepl  DBusSpecification.fdepl
org.genivi.commonapi.dbus/src/org/genivi/commonapi/dbus/: Generator.java
org.genivi.commonapi.dbus/src/org/genivi/commonapi/dbus/generator/: FrancaDBusGenerator.xtend  FrancaDBusGeneratorExtensions.xtend
packager/: build.properties  pom.xml
